@@ -12,5 +12,6 @@ urlpatterns = patterns('',
     (r'^calendar/',include('shopapp.calendar.urls')),
     (r'^comment/',include('shopapp.comments.urls')),
     (r'^weixin/',include('shopapp.weixin.urls')),
+    (r'^yunda/',include('shopapp.yunda.urls')),
 )
 
